--- a/sass/global.scss
+++ b/sass/global.scss
@@ -9,21 +9,20 @@
     position: sticky;
     top: 0px;
     z-index: 1;
-    font-size: 12px;
+    font-size: 1.4vw;
     text-align: center;
     background-color: $mainColor-linen;
     color: $text;
-    padding: 8px;
+    padding: 10px;
 }
 
 .header {
    //position: relative;
     display: flex;
     width: 100%;
-    height: 9vw;
+    height: 6vw;
     justify-content: center;
     align-items: center;
-    font-size: 1.4vw;
 }
 
 .header-text {
@@ -34,68 +33,89 @@
     left: 5px;
     justify-content: center;
 }
+
 .header-text h2 {
-    font-size: 4vw;
-    font-weight: 400;
+    font-size: 4.5vw;
+    font-weight: 600;
     color: $text;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
 }
+
+/*
 .logo {
     display: inline-block;
     height: 5vw;
     margin-left: -12px;
     margin-top: 10px;
 }
- .menu-button {
+*/
+
+.menu-button {
     background-color: $mainColor-linen;
     padding: 2vw;
     border: none;
     cursor: pointer;
     border-radius: 50%;
-    width: 6vw;
-    height: 6vw;
+    width: 10vw;
+    height: 10vw;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 } 
- .link {
+
+.link {
     background-color: white;
-    width: 2vw;
-    height: 0.2vw;
+    width: 6vw;
+    height: 1vw;
 } 
  .dropdown-menu {
     position:absolute;
-    left: 65px;
+    left: 30px;
     display: none;
     font-family: 'Open Sans', sans-serif;
 }
-@media screen and (max-width: 660px){
+@media screen and (max-width: 600px){
+    .info-box{
+        font-size: 3vw;
+        font-weight: 600;
+    }
+    
+    .header-text h2 {
+        font-size: 7vw;
+        letter-spacing: 3px;
+    }
+
     .dropdown-menu {
       display: inline-block;
     }
+
     .topLink {
         display: none;
     }
 
     .header-text {
-    position: relative;
+        position: relative;
     }
+
     .header{
         justify-content: center;
+        height: 15vw;
     }
+
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #ffffff;
-    min-width: 160px;
+    min-width: 140px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }   
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 12px;
+    font-size: 24px;
     text-decoration: none;
     display: block;
 }
@@ -112,7 +132,7 @@
    margin: 15px;
    text-decoration: none;
    color: $text;
-   font-size: 2vw;
+   font-size: 1.8vw;
 
 }
 .topLink:link{
@@ -139,8 +159,8 @@
 }
 .action-buttons{
     color: $text;
-    margin: 12px;
-    font-size: 28px;
+    margin: 10px;
+    font-size: 26px;
 }
 
 .cart-button:hover {
@@ -260,18 +280,13 @@
     margin: 5px;
 }
 
-
-
 // varukorg
 
-
-
-/* 
-
+/*
 main {
     background-color: $mainColor-linen;
-} */
-
+}
+*/
 .cart-flex {
     display: flex;
     flex-direction: column;
