index sidans  bilder

--- a/css/main.css
+++ b/css/main.css
@@ -182,12 +182,12 @@
   margin-top: 10px; }
 
 .left {
-  background-image: url(/css/images/pyramidochknut.JPG);
+  background-image: url(./images/pyramidochknut.JPG);
   background-size: cover;
   background-position: center; }
 
 .right {
-  background-image: url(/css/images/pastellbubblormini.JPG);
+  background-image: url(./images/pastellbubblormini.JPG);
   background-size: cover;
   background-position: center; }
 
