--- a/sass/global.scss
+++ b/sass/global.scss
@@ -223,13 +223,13 @@
 }
 
 .left {
-    background-image: url(/css/images/pyramidochknut.JPG);
+    background-image: url(./images/pyramidochknut.JPG);
     background-size: cover;
     background-position: center;
 }
 
 .right {
-    background-image: url(/css/images/pastellbubblormini.JPG);
+    background-image: url(./images/pastellbubblormini.JPG);
     background-size: cover;
     background-position: center;
 }
