--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -4,7 +4,8 @@ $rightImage: url(./images/pastellbubblormini.jpg);
 $adminFormBG: url(./images/boxes.jpg);
 $userIcon: url(./images/Id-Badge.png);
 $lockIcon: url(./images/Lock-Icon.png);
-$dropdown-menu: url(./images/bars-solid.svg);
+$confirmedBuy: url(./images/confirmedBuy.jpg);
+
 $main-text: 'Open Sans', sans-serif;
 
 // Färger
