--- a/css/main.css
+++ b/css/main.css
@@ -195,26 +195,23 @@
   position: absolute;
   width: 130px;
   height: 110px;
-  margin-top: 25%;
+  top: 20px;
   left: 22px;
   color: white;
-  background-color: rgba(67, 68, 67, 0.562); }
+  display: flex;
+  gap: 10px;
+  flex-direction: column; }
 
 .card-text h4 {
-  position: relative;
-  left: 15px;
-  top: 10%;
   font-size: 25px;
-  width: 100px;
-  text-align: center; }
+  text-align: center;
+  background-color: rgba(67, 68, 67, 0.562);
+  padding: 10px; }
 
 .card-text p {
-  position: relative;
   color: white;
   font-size: 15px;
   padding: 10px;
-  width: 110px;
-  margin-top: -137px;
   background-color: rgba(67, 68, 67, 0.562); }
 
 /*---------------FOOTER-------------------*/
@@ -444,6 +441,11 @@ body {
   margin: auto; }
 
 /* Product section */
+.product-items {
+  display: flex;
+  align-items: center;
+  flex-direction: column; }
+
 .products {
   background-color: #f3eae2;
   padding: 3.2rem 0; }
@@ -512,15 +514,14 @@ body {
 
 .btn-load {
   justify-content: center;
-  padding: 0.8rem 0;
-  width: 8%;
-  margin-left: 45vw;
+  padding: 0.8rem;
   display: inline-block;
   text-transform: uppercase;
   cursor: pointer;
   border: none;
   transition: all 0.6s ease;
-  margin-top: 3px; }
+  margin-top: 3px;
+  margin-left: 45vw; }
 
 .btn-wish:hover {
   color: #fff; }
@@ -581,7 +582,8 @@ body {
     margin: 2rem;
     position: relative;
     display: none;
-    width: 300px; }
+    width: 300px;
+    justify-self: center; }
   .product-btns {
     display: flex;
     width: 300px; } }
