--- a/css/main.css
+++ b/css/main.css
@@ -615,12 +615,18 @@ body {
 .contact-Text {
   padding-bottom: 2rem; }
 
+.contact-h2, .contact-h3 {
+  font-family: Georgia, "Times New Roman", Times, serif; }
+
 .aboutContainer {
   width: 100%;
   margin: auto;
   font-family: "Open Sans", sans-serif;
   text-align: center;
   box-sizing: border-box; }
+
+.aboutContainer h2 {
+  font-family: Georgia, "Times New Roman", Times, serif; }
 
 .contactSection {
   display: flex;
@@ -665,7 +671,8 @@ body {
   cursor: pointer; }
 
 #contactForm-h2 {
-  text-align: center; }
+  text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif; }
 
 .submitted {
   padding: 12px 20px;
@@ -732,7 +739,9 @@ body {
   margin-top: 2vw; }
 
 .cart-flex h2 {
-  font-size: 2.5vw; }
+  font-size: 2.5vw;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: #5c5c5c; }
 
 .cart-item h4 {
   font-size: 1vw; }
@@ -840,7 +849,8 @@ body {
 .heart-icon {
   display: flex;
   align-items: center;
-  position: relative; }
+  position: relative;
+  cursor: pointer; }
 
 .heart-icon span {
   font-size: 1vw;
@@ -920,7 +930,8 @@ body {
   padding: 2%;
   margin: 3% 25%;
   border-radius: 25px;
-  font-size: 24px; }
+  font-size: 24px;
+  cursor: pointer; }
 
 .modal {
   display: none;
@@ -935,7 +946,7 @@ body {
   background-color: black;
   background-color: rgba(0, 0, 0, 0.9); }
 
-.modal-content {
+.buy-modal-content {
   background-color: #f3eae2;
   background-image: url(./images/confirmedBuy.jpg);
   background-size: 125px;
