--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -7,6 +7,7 @@ $lockIcon: url(./images/Lock-Icon.png);
 $confirmedBuy: url(./images/confirmedBuy.jpg);
 
 $main-text: 'Open Sans', sans-serif;
+$rubrik: Georgia, "Times New Roman", Times, serif;
 
 // Färger
 $mainColorBackground: #e7ccb1;
