--- a/sass/varukorg.scss
+++ b/sass/varukorg.scss
@@ -1,3 +1,5 @@
+
+
 .cart-flex {
     padding: 3vw;
     background-color:  #f3eae2;
@@ -32,6 +34,8 @@ height: auto;
 
 .cart-flex h2 {
 font-size: 2.5vw;
+font-family: $rubrik;
+color: $text;
 }
 
 .cart-item h4 {
