--- a/css/main.css
+++ b/css/main.css
@@ -593,7 +593,6 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr); } }
 
-/*---------------------Contact page----------------------*/
 .contactPage {
   margin: auto;
   display: flex;
@@ -601,7 +600,7 @@ body {
   justify-content: center;
   align-items: center;
   padding-bottom: 5vw;
-  color: #705b5b; }
+  color: #5c5c5c; }
 
 .contactPageContainer {
   max-width: 1100px;
@@ -673,11 +672,6 @@ body {
 #contactForm-h2 {
   text-align: center;
   font-family: Georgia, "Times New Roman", Times, serif; }
-
-.submitted {
-  padding: 12px 20px;
-  margin: 8px 0;
-  color: red; }
 
 #massageInputfield {
   height: 200px; }
