--- a/sass/contactpage.scss
+++ b/sass/contactpage.scss
@@ -1,6 +1,3 @@
-
-/*---------------------Contact page----------------------*/
-
 .contactPage{
     margin: auto;
     display: flex;
@@ -8,7 +5,7 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 5vw;
-    color: $mainTextColor;
+    color: $text;
 }
 
 .contactPageContainer{
@@ -18,7 +15,6 @@
     margin-bottom: 5%;
     padding: 10px;
 }
-
 
 .contact-h3,
 .contact-h2, 
@@ -97,12 +93,6 @@
     font-family: $rubrik;
 }
 
-.submitted{
-    padding: 12px 20px;
-    margin: 8px 0;
-    color: red;
-}
-
 #massageInputfield{
   height: 200px;
 }
@@ -111,9 +101,6 @@
     width: 100%;
     text-align: left;
 }
-
-
-
 
 /*-----------------------MEDIA QUERIES--------------------------------*/
 
@@ -151,7 +138,5 @@
         margin: auto;
         padding: 20px;
       }
-
-    
 
 }
